Added platform keyword, static class concept, indentation on generated code, native keyword and implementation, if statement, block generation in backend code, bool type, function statement support, core library

--- a/Windows/ClepsToolset/ClepsToolset/ClepsCompiler/ClepsCompiler.csproj
+++ b/Windows/ClepsToolset/ClepsToolset/ClepsCompiler/ClepsCompiler.csproj
@@ -69,6 +69,7 @@
     <Compile Include="CompilerStructures\CompilerConstants.cs" />
     <Compile Include="CompilerTypes\ArrayClepsType.cs" />
     <Compile Include="CompilerTypes\BasicClepsType.cs" />
+    <Compile Include="CompilerTypes\BasicStaticClepsType.cs" />
     <Compile Include="CompilerTypes\ClepsType.cs" />
     <Compile Include="CompilerStructures\CompilerError.cs" />
     <Compile Include="CompilerStructures\CompilerErrorException.cs" />
