Support for the this keyword, Addressof and valueAt operations, Better function call support, Variables now follow the register model (all js variables are created a ptr to the var is stored), Updated function calling so that member functions sor natively supported types like System.Types.Byte works, Code cleanup and bugfixes

--- a/Windows/ClepsToolsetPrototype_v3/ClepsToolset/ClepsCompiler/ClepsCompiler.csproj
+++ b/Windows/ClepsToolsetPrototype_v3/ClepsToolset/ClepsCompiler/ClepsCompiler.csproj
@@ -94,6 +94,7 @@
     <Compile Include="SyntaxTreeVisitors\ClepsFunctionBodyGeneratorVisitor_FieldOrClass.cs" />
     <Compile Include="SyntaxTreeVisitors\ClepsFunctionBodyGeneratorVisitor_FunctionAssignment.cs" />
     <Compile Include="SyntaxTreeVisitors\ClepsFunctionBodyGeneratorVisitor_FunctionCall.cs" />
+    <Compile Include="SyntaxTreeVisitors\ClepsFunctionBodyGeneratorVisitor_PointerManipulation.cs" />
     <Compile Include="SyntaxTreeVisitors\ClepsFunctionBodyGeneratorVisitor_SimpleRegisterAssignments.cs" />
     <Compile Include="SyntaxTreeVisitors\ClepsFunctionBodyGeneratorVisitor_Statements.cs" />
     <Compile Include="SyntaxTreeVisitors\ClepsFunctionBodyGeneratorVisitor_VariableOperations.cs" />
