Generics types compiler support for creation and function resolution. Instantiation and Calling pending

--- a/Windows/ClepsToolsetPrototype_v3/ClepsToolset/ClepsCompiler/ClepsCompiler.csproj
+++ b/Windows/ClepsToolsetPrototype_v3/ClepsToolset/ClepsCompiler/ClepsCompiler.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Utils\Collections\OrderedDictionary.cs" />
     <Compile Include="Utils\Collections\OrderedDictionaryDebug.cs" />
     <Compile Include="Utils\Helpers\NameGenerator.cs" />
+    <Compile Include="Utils\Types\SuccessStatus.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
